@@ -9,6 +9,7 @@
 * #865 - Allow a body with an invalid encoding to be round tripped (kjg)
 * #868 - Use the Ruby19.charset_encoder when decoding message bodies (kjg)
 * #866 - Support decoding message bodies with non-Ruby-standard charsets (jeremy)
+* #907 - Mail::ContentDispositionField should work with nil value (kjg)
 
 == Version 2.6.3 - Mon Nov 3 23:53 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>
 
